--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>大場遼一</h1>
-    <img src = "VOyxefx9_400x400.jpg">
+    <img src = "https://pbs.twimg.com/profile_images/1238208025535459329/VOyxefx9_400x400.jpg">
     <h2>About</h2>
     <p>
       簡単な自己紹介やアピール。<br>
